--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,6 @@
     "source": "https://github.com/mezzio/mezzio-skeleton"
   },
   "require": {
-    "ajgl/csv-rfc": "^0.4.0",
     "php": "^8.0",
     "guzzlehttp/guzzle": "^6.5",
     "laminas/laminas-component-installer": "^2.6",
@@ -44,7 +43,8 @@
     "rollun-com/rollun-logger": "^7.3.0",
     "rollun-com/rollun-openapi": "^11.2.0",
     "rollun-com/rollun-utils": "^8.1.0",
-    "symfony/dotenv": "^6.0.3"
+    "symfony/dotenv": "^6.0.3",
+    "ajgl/csv-rfc": "^0.4.0"
   },
   "require-dev": {
     "filp/whoops": "^2.15",
