--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,11 +5,8 @@
          colors="true">
 
     <testsuites>
-        <testsuite name="Functional">
-            <directory>./test/Functional</directory>
-        </testsuite>
-        <testsuite name="Unit">
-            <directory>./test/Unit</directory>
+        <testsuite name="unit">
+            <directory>./test/unit</directory>
         </testsuite>
     </testsuites>
 
